# FuckACE

./: .gitignore  README.md  fix.cjs  package-lock.json  package.json  tsconfig.json  vite.config.ts
scripts/: sync-version.cjs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: lib.rs  mainfest.xml
src/components/: ActiveActionsCard.tsx  AppHeader.tsx  FetchErrorSnackbar.tsx  LogPanel.tsx  MemoryCleanCard.tsx  MetricChart.tsx  PassiveActionsCard.tsx  PerformancePanel.tsx  RestrictionStatusCard.tsx  SystemInfoCard.tsx
src/components/dialogs/: AnnouncementsDialog.tsx  UpdateDialog.tsx
src/services/: api.ts  processControl.ts  report.ts
src/theme/: appTheme.ts
src/types/: app.ts
